# ndots

./: changelog.md  pyproject.toml  readme.md
ndots/: __init__.py  ndots.py
tests/: test_ndots.py
tools/: install ndots.py
