[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ndots"
authors = [
    {name = "Ruud van der Ham", email = "rt.van.der.ham@gmail.com"}
]
description = "ndots - matrix fonts"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only"
]
[project.urls]
Homepage = "https://github.com/salabim/ndots"
Repository = "https://github.com/salabim/ndots"

[tool.setuptools]
packages = ["ndots"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

